--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Torch Generator</title>
     <script src="calculations.js"></script>
+    <script src="prices.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -15,6 +16,10 @@
       <div>
         <ul id="torches">
         </ul>
+      </div>
+      <div>
+        <span>Wins:</span>
+        <span id="value" >0</span>
       </div>
     </div>
   </body>
